--- a/src/DataPrep.ipynb
+++ b/src/DataPrep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-06-30T15:41:30.403117Z",
@@ -16,10 +16,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "{'divide': 'ignore', 'over': 'warn', 'under': 'ignore', 'invalid': 'ignore'}"
+      "text/plain": "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 2
     }
    ],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-06-30T15:41:30.981735Z",
@@ -53,7 +53,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "DatabaseDownloaded\n"
+     "text": "Database  Exists\n"
     }
    ],
    "source": [
@@ -67,9 +67,9 @@
     "if not exists(FILE):\n",
     "    with open(FILE, 'wb') as f:\n",
     "        f.write(requests.get(URL, allow_redirects=False).content)\n",
-    "        print('Downloaded')\n",
+    "        print(' Downloaded')\n",
     "else:\n",
-    "    print('Exists')\n",
+    "    print(' Exists')\n",
     "\n",
     "WW_DATA = pd.read_excel(FILE)\n",
     "WW_DATA['dateRep'] = pd.to_datetime(WW_DATA['dateRep'], format='%d/%m/%Y')\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-06-30T15:41:33.982732Z",
@@ -209,6 +209,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "     dateRep  day  month  year  cases  deaths   countriesAndTerritories geoId  \\\n0 2019-12-31   31     12  2019      0       0  United_States_of_America    US   \n1 2020-01-01    1      1  2020      0       0  United_States_of_America    US   \n2 2020-01-02    2      1  2020      0       0  United_States_of_America    US   \n3 2020-01-03    3      1  2020      0       0  United_States_of_America    US   \n4 2020-01-04    4      1  2020      0       0  United_States_of_America    US   \n\n  countryterritoryCode  popData2019 continentExp  \n0                  USA  329064917.0      America  \n1                  USA  329064917.0      America  \n2                  USA  329064917.0      America  \n3                  USA  329064917.0      America  \n4                  USA  329064917.0      America  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>dateRep</th>\n      <th>day</th>\n      <th>month</th>\n      <th>year</th>\n      <th>cases</th>\n      <th>deaths</th>\n      <th>countriesAndTerritories</th>\n      <th>geoId</th>\n      <th>countryterritoryCode</th>\n      <th>popData2019</th>\n      <th>continentExp</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2019-12-31</td>\n      <td>31</td>\n      <td>12</td>\n      <td>2019</td>\n      <td>0</td>\n      <td>0</td>\n      <td>United_States_of_America</td>\n      <td>US</td>\n      <td>USA</td>\n      <td>329064917.0</td>\n      <td>America</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2020-01-01</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2020</td>\n      <td>0</td>\n      <td>0</td>\n      <td>United_States_of_America</td>\n      <td>US</td>\n      <td>USA</td>\n      <td>329064917.0</td>\n      <td>America</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2020-01-02</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2020</td>\n      <td>0</td>\n      <td>0</td>\n      <td>United_States_of_America</td>\n      <td>US</td>\n      <td>USA</td>\n      <td>329064917.0</td>\n      <td>America</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2020-01-03</td>\n      <td>3</td>\n      <td>1</td>\n      <td>2020</td>\n      <td>0</td>\n      <td>0</td>\n      <td>United_States_of_America</td>\n      <td>US</td>\n      <td>USA</td>\n      <td>329064917.0</td>\n      <td>America</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2020-01-04</td>\n      <td>4</td>\n      <td>1</td>\n      <td>2020</td>\n      <td>0</td>\n      <td>0</td>\n      <td>United_States_of_America</td>\n      <td>US</td>\n      <td>USA</td>\n      <td>329064917.0</td>\n      <td>America</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "country_data = WW_DATA[WW_DATA.countriesAndTerritories == 'United_States_of_America'].sort_values(\n",
+    "        by='dateRep',\n",
+    "        ascending=True,\n",
+    "        ignore_index=True)\n",
+    "\n",
+    "country_data.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "     Tasa_Incid  r(t)_casos  Tasa_defun  r(t)_deaths\n0      0.000030    0.000000    0.000000     0.000000\n1      0.000030    0.000000    0.000000     0.000000\n2      0.000036    0.138629    0.000000     0.000000\n3      0.000043    0.321888    0.000000     0.000000\n4      0.000067    0.321888    0.000000     0.000000\n..          ...         ...         ...          ...\n166   14.026339    0.030013    2.117880    -0.054631\n167   14.447095    0.016266    1.996749    -0.065354\n168   14.677442    0.006320    1.857723    -0.066853\n169   14.921122   -0.024667    1.863397    -0.070551\n170   15.097422   -0.024139    1.756246     0.027478\n\n[171 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Tasa_Incid</th>\n      <th>r(t)_casos</th>\n      <th>Tasa_defun</th>\n      <th>r(t)_deaths</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.000030</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.000030</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.000036</td>\n      <td>0.138629</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.000043</td>\n      <td>0.321888</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.000067</td>\n      <td>0.321888</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>166</th>\n      <td>14.026339</td>\n      <td>0.030013</td>\n      <td>2.117880</td>\n      <td>-0.054631</td>\n    </tr>\n    <tr>\n      <th>167</th>\n      <td>14.447095</td>\n      <td>0.016266</td>\n      <td>1.996749</td>\n      <td>-0.065354</td>\n    </tr>\n    <tr>\n      <th>168</th>\n      <td>14.677442</td>\n      <td>0.006320</td>\n      <td>1.857723</td>\n      <td>-0.066853</td>\n    </tr>\n    <tr>\n      <th>169</th>\n      <td>14.921122</td>\n      <td>-0.024667</td>\n      <td>1.863397</td>\n      <td>-0.070551</td>\n    </tr>\n    <tr>\n      <th>170</th>\n      <td>15.097422</td>\n      <td>-0.024139</td>\n      <td>1.756246</td>\n      <td>0.027478</td>\n    </tr>\n  </tbody>\n</table>\n<p>171 rows × 4 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 60
+    }
+   ],
+   "source": [
+    "letalidad = (np.sum(country_data.deaths)/np.sum(country_data.cases))*100\n",
+    "population = country_data.popData2019[0]\n",
+    "\n",
+    "new_data = pd.DataFrame()\n",
+    "\n",
+    "#  Nuevos Casos\n",
+    "ntc, rtc = data2log(country_data.cases, day_mean, ret_smth=True)\n",
+    "xc, yc = trim_first_zero(ntc, rtc)\n",
+    "\n",
+    "xc = smoother((xc/population)*10**5)\n",
+    "yc = smoother(yc)\n",
+    "\n",
+    "new_data[\"Tasa_Incid\"] = xc\n",
+    "new_data[\"r(t)_casos\"] = yc\n",
+    "\n",
+    "# Defunciones\n",
+    "ntd, rtd = data2log(country_data.deaths, day_mean, ret_smth=True)\n",
+    "dif=abs(len(ntd)-len(xc))\n",
+    "\n",
+    "xd = ntd[dif: len(ntd)]\n",
+    "yd = rtd[dif:len(rtd)]\n",
+    "\n",
+    "xd=smoother((xd/population)*10**6)\n",
+    "yd=smoother(yd)\n",
+    "\n",
+    "new_data[\"Tasa_defun\"] = xd\n",
+    "new_data[\"r(t)_deaths\"] = yd\n",
+    "\n",
+    "new_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "execution": {
@@ -230,16 +301,33 @@
     "        ascending=True,\n",
     "        ignore_index=True)\n",
     "\n",
-    "    new_data = country_data[:-1][[\"dateRep\", \"cases\", \"deaths\"]]\n",
+    "    letalidad = (np.sum(country_data.deaths)/np.sum(country_data.cases))*100\n",
+    "    population = country_data.popData2019[0]\n",
     "\n",
-    "    new_data[\"vel_cases\"] = data2log(country_data.cases, 10)\n",
-    "    new_data[\"smooth_cases\"] = smoother(new_data.cases, 10)\n",
+    "    new_data = pd.DataFrame()\n",
     "\n",
-    "    new_data[\"vel_deaths\"] = data2log(country_data.deaths, 10)\n",
-    "    new_data[\"smooth_deaths\"] = smoother(new_data.deaths, 10)\n",
+    "    #  Nuevos Casos\n",
+    "    ntc, rtc = data2log(country_data.cases, day_mean, ret_smth=True)\n",
+    "    xc, yc = trim_first_zero(ntc, rtc)\n",
     "\n",
-    "    new_data[\"dateRep\"] = new_data[\"dateRep\"].apply(lambda date: date.isoformat())\n",
-    "    # new_data = new_data.iloc[trim_first_zero(new_data[\"vel_cases\"], buffer=2).index]\n",
+    "    xc = smoother((xc/population)*10**5)\n",
+    "    yc = smoother(yc)\n",
+    "\n",
+    "    new_data[\"Tasa_Incid\"] = xc\n",
+    "    new_data[\"r(t)_casos\"] = yc\n",
+    "\n",
+    "    # Defunciones\n",
+    "    ntd, rtd = data2log(country_data.deaths, day_mean, ret_smth=True)\n",
+    "    dif=abs(len(ntd)-len(xc))\n",
+    "\n",
+    "    xd = ntd[dif: len(ntd)]\n",
+    "    yd = rtd[dif:len(rtd)]\n",
+    "\n",
+    "    xd=smoother((xd/population)*10**6)\n",
+    "    yd=smoother(yd)\n",
+    "\n",
+    "    new_data[\"Tasa_defun\"] = xd\n",
+    "    new_data[\"r(t)_deaths\"] = yd\n",
     "\n",
     "    try:\n",
     "        container[country] = new_data.to_dict(orient=\"registers\")\n",
