--- a/src/Analyzer Remaster.ipynb
+++ b/src/Analyzer Remaster.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-07-04T16:52:48.124733Z",
@@ -477,7 +477,16 @@
      "shell.execute_reply.started": "2020-07-04T16:52:48.124733Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-53078f567443>, line 19)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-53078f567443>\"\u001b[1;36m, line \u001b[1;32m19\u001b[0m\n\u001b[1;33m    name=\"<b>\"+pais+\"</b>\",))uevos Casos\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def phase_maker(DF, KEYS, NAMES, day_mean=10, smooth=5, browser=False):\n",
     "    print(f'\\nGenerating interactive html bundle of countries Phase: \\n')\n",
@@ -558,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-07-04T16:52:48.155998Z",
@@ -570,19 +579,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Generating interactive html bundle of countries Phase: \n",
-      "\n",
-      " - Estados Unidos\n",
-      " - Brasil\n",
-      " - México\n",
-      " - España\n",
-      " - Italia\n",
-      " - Perú\n",
-      " - Chile\n"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'phase_maker' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-156a70f7b6f0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;34m'Chile'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m ]\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mphase_maker\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWW_DATA\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mCOUNTRIES\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPAISES\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mday_mean\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msmooth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbrowser\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'phase_maker' is not defined"
      ]
     }
    ],
@@ -1461,7 +1465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
