--- a/src/Analyzer Remaster.ipynb
+++ b/src/Analyzer Remaster.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-07-04T16:52:01.757382Z",
@@ -23,14 +23,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
-      ]
+      "text/plain": "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
    "source": [
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-07-04T16:52:28.703634Z",
@@ -57,15 +55,14 @@
      "iopub.status.idle": "2020-07-04T16:52:34.222470Z",
      "shell.execute_reply": "2020-07-04T16:52:34.222470Z",
      "shell.execute_reply.started": "2020-07-04T16:52:28.703634Z"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Database Downloaded\n"
-     ]
+     "name": "stdout",
+     "text": "Database Exists\n"
     }
    ],
    "source": [
@@ -248,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-07-04T16:52:34.353979Z",
@@ -467,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-07-04T16:52:48.124733Z",
@@ -477,16 +474,7 @@
      "shell.execute_reply.started": "2020-07-04T16:52:48.124733Z"
     }
    },
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-53078f567443>, line 19)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-53078f567443>\"\u001b[1;36m, line \u001b[1;32m19\u001b[0m\n\u001b[1;33m    name=\"<b>\"+pais+\"</b>\",))uevos Casos\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def phase_maker(DF, KEYS, NAMES, day_mean=10, smooth=5, browser=False):\n",
     "    print(f'\\nGenerating interactive html bundle of countries Phase: \\n')\n",
@@ -567,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-07-04T16:52:48.155998Z",
@@ -575,19 +563,14 @@
      "iopub.status.idle": "2020-07-04T16:52:49.206547Z",
      "shell.execute_reply": "2020-07-04T16:52:49.206547Z",
      "shell.execute_reply.started": "2020-07-04T16:52:48.155998Z"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'phase_maker' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-156a70f7b6f0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;34m'Chile'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m ]\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mphase_maker\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWW_DATA\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mCOUNTRIES\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPAISES\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mday_mean\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msmooth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbrowser\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'phase_maker' is not defined"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\nGenerating interactive html bundle of countries Phase: \n\n - Estados Unidos\n - Brasil\n - México\n - España\n - Italia\n - Perú\n - Chile\n"
     }
    ],
    "source": [
@@ -609,7 +592,7 @@
     "    'Perú',\n",
     "    'Chile',\n",
     "]\n",
-    "phase_maker(WW_DATA, COUNTRIES, PAISES, day_mean=10, smooth=10, browser=False)"
+    "phase_maker(WW_DATA, COUNTRIES, PAISES, day_mean=10, smooth=10, browser=True)"
    ]
   },
   {
@@ -1447,6 +1430,20 @@
     "fig = px.line(x=new_x, y=new_y)\n",
     "fig.show(renderer=\"browser\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
